--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.7.0",
     "react-apollo": "^2.3.3",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-spinners": "^0.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
